# soundcloud

./: --Frag1  app.py  downloader.py  main.py  metadata_fetcher.py  pyproject.toml  requirements.txt  utils.py
downloads/: a072170b-a281-4638-b1f2-bf87d05d2af3.opus.part-Frag1.part  a2f1c1ff-a4dc-410c-8b9c-e9fb1702aa64.opus.part-Frag21.part  e3a1812a-cda2-4c9c-9c0e-81f027d67769.opus.part  f7df0230-e3c7-47cc-b294-886952c04604.m4a.part-Frag14.part
static/: non.txt
templates/: index.html
